make searching and sorting on the server
